4 Oct 2005:  Menelaos Karavelas
- renamed namespace Voronoi_diagram_2_namespace to VoronoiDiagram_2
- added short names for publicly visible classes
- added Internal namespace and moved all internal code to this namespace
- modified Accessor class to provide the Find_valid_vertex functor
- added accessor method in Voronoi_diagram_2 class that returns an
  Accessor object
- changed the implementation of accessor; the accessor now stores a
  pointer to the class.

28 August 2005:  Menelaos Karavelas
- attempt to remove warning produced by ICL.EXE for the
Concrete_Voronoi_diagram_2 class.

6 August 2005:  Menelaos Karavelas
- demo: fixed the display of the conflict region for all three kinds
  of Voronoi diagrams.
- demo: eliminated use of a non-documented constructor
- VDA: added dual() methods that go from Delaunay features to Voronoi
  diagram features

3 August 2005:  Menelaos Karavelas
- the demo now shows the conflict region for a site. The code is kind
  of ugly and should be modified; the color of the site should be
  different from the color of the conflict region. the conflict region
  is not yet done for the Apollonius diagram

30 July 2005:  Menelaos Karavelas
- removed duplicate typedef in Virtual_Voronoi_diagram_base_2 class;
  g++ version 4.x.x was complaining.

20 July 2005:  Menelaos Karavelas
- demo: added halfedge classes that derive from the halfedge class of the
  adaptor, that are used for drawing to Qt_widget
- code:
  * removed the Voronoi_edge_2 and Voronoi_vertex_2 classes from the
    Voronoi traits; their functionality has been moved in the halfedge and
    vertex classes of the adaptor.
  * added first attempt for implementation of identity Voronoi traits
- testing: removed testing for Voronoi_edge_2 and Voronoi_vertex_2 concepts;
  added testing for the corresponding functionality added in Halfedge and
  Vertex.

17 July 2005:  Menelaos Karavelas
- in various doc files renamed:
  * Voronoi_diagram_adaptor_2 to Voronoi_diagram_2